updates on bspwm configs

--- a/BSPWM/bspwm/apps/polybar/modules.ini
+++ b/BSPWM/bspwm/apps/polybar/modules.ini
@@ -174,12 +174,12 @@ click-left = ~/.config/bspwm/scripts/powermenu.sh &
 [module/launcher]
 type = custom/text
 
-content = " " 
-content-background = ${colors.blue}
-content-foreground = ${colors.black}
+content = " "
+content-background = ${colors.background}
+content-foreground = ${colors.foreground}
 content-underline = ${colors.background}
 content-overline = ${colors.background}
-content-padding = 2
+content-padding = 1
 
 click-left = rofi -no-config -no-lazy-grab -show drun -modi drun -theme ~/.config/bspwm/apps/rofi/launcher.rasi
 
