--- a/SWAYWM/sway/apps/waybar/waybar/config
+++ b/SWAYWM/sway/apps/waybar/waybar/config
@@ -1,187 +1,164 @@
 {
-    // "layer": "top", // Waybar at top layer
-    "position": "top", // Waybar position (top|bottom|left|right)
-    "height": 25, // Waybar height (to be removed for auto height)
-    // "width": 1280, // Waybar width
-    "spacing": 2, // Gaps between modules (4px)
+  ////////////
+  // Waybar //
+  ////////////
 
-    // Choose the order of the modules
-    "modules-left": [
-      "sway/workspaces", 
-      "sway/mode", 
-      "sway/scratchpad", 
-      "custom/media"
-    ],
+  // "layer": "top", // Waybar at top layer
+  "position": "left", // Waybar position (top|bottom|left|right)
+  // "height": 25, // Waybar height (to be removed for auto height)
+  "width": 28, // Waybar width
 
-    "modules-center": [ "sway/window" ],
+  //////////////////////////
+  // ORDER OF THE MODULES //
+  //////////////////////////
 
-    "modules-right": [
-      "idle_inhibitor", 
-      "pulseaudio", 
-      "network", 
-      "cpu", 
-      "memory", 
-      "temperature", 
-      "backlight", 
-      "keyboard-state", 
-      "sway/language", 
-      "battery", 
-      "battery#bat2", 
-      "clock", 
-      "tray"
-    ],
+  "modules-left": [
+    "custom/launcher",
+    "sway/workspaces", 
+  ],
 
-    // Modules configuration
-    // "sway/workspaces": {
-    //     "disable-scroll": true,
-    //     "all-outputs": true,
-    //     "format": "{name}: {icon}",
-    //     "format-icons": {
-    //         "1": "",
-    //         "2": "",
-    //         "3": "",
-    //         "4": "",
-    //         "5": "",
-    //         "urgent": "",
-    //         "focused": "",
-    //         "default": ""
-    //     }
-    // },
+  "modules-center": [ ],
 
-    "keyboard-state": {
-        "numlock": true,
-        "capslock": true,
-        "format": "{name} {icon}",
-        "format-icons": {
-            "locked": "",
-            "unlocked": ""
-        }
+  "modules-right": [
+    "tray",
+    "network",
+    "pulseaudio",
+    "clock",
+    "custom/power"
+  ],
+
+  ///////////////////////////
+  // MODULES CONFIGURATION //
+  ///////////////////////////
+
+  "custom/launcher": {
+    "format": "󱓞",
+    "tooltip": false
+  },
+
+  "sway/workspaces": {
+    "persistent_workspaces": {
+      "1": [],
+      "2": [],
+      "3": [],
+      "4": [],
+      "5": [],
+      "6": [],
+      "7": [],
+      "8": [],
     },
+    "disable-scroll": false,
+    "all-outputs": true,
+  },
 
-    "sway/window": {
-      "format": "  {}",
-      "max-length": 40,
-      "rewrite": {
-        "": "Desktop",
-        "(.*) - Mozilla Firefox": "Mozilla Firefox",
-      },
+  "tray": {
+    "icon-size": 15,
+    "spacing": 8
+  },
+
+  "network": {
+    // "interface": "wlp2*", // (Optional) To force the use of this interface
+    "format-wifi": "{essid} ({signalStrength}%) ",
+    //"format-ethernet": "{ipaddr}/{cidr} ",
+    "format-ethernet": "󰖩",
+    "tooltip-format": " {ifname} via {gwaddr}",
+    //"format-linked": "{ifname} (No IP) ",
+    "format-linked": "󱚵",
+    "format-disconnected": "󰖪",
+    //"format-alt": "{ifname}: {ipaddr}/{cidr}"
+  },
+
+  "pulseaudio": {
+    "scroll-step": 5, // %, can be a float
+    "format": "{icon}",
+    "tooltip-format": "{icon} {volume}%",
+    "format-bluetooth": "{volume}% {icon} {format_source}",
+    "format-bluetooth-muted": " {icon} {format_source}",
+    "format-muted": "",
+    "format-source": "{volume}% ",
+    "format-source-muted": "",
+    "format-icons": {
+      "headphone": "",
+      "hands-free": "",
+      "headset": "",
+      "phone": "",
+      "portable": "",
+      "car": "",
+      "default": ["", "", ""]
     },
+    "on-click": "exec pactl set-sink-mute @DEFAULT_SINK@ toggle",
+    "on-click-right": "pavucontrol"
+  },
 
-    "sway/mode": {
-        "format": "<span style=\"italic\">{}</span>"
+  "clock": {
+    // "timezone": "America/New_York",
+	  "format":"{:%H%n%M}", 
+    "format-alt": "{:%d%n%m%n%y}",
+    "tooltip-format": "<big>{:%B, %Y}</big>\n<tt><small>{calendar}</small></tt>",
+      "today-format": "<span background='#eb4d4b'><b>{}</b></span>",
+      "format-calendar": "<span color='#aaaaaa'><b>{}</b></span>",
+      "format-calendar-weekdays": "<span color='#ffcc66'><b>{}</b></span>",
+  },
+
+  "custom/power": {
+    "format": "",
+    "on-click": "exec ~/.config/sway/scripts/power-menu.sh",
+    "tooltip": false,
+  },
+
+
+
+
+  // não finalizado
+
+
+  "sway/window": {
+    "format": "  {}",
+    "max-length": 40,
+    "rewrite": {
+      "": "Desktop",
+      "(.*) - Mozilla Firefox": "Mozilla Firefox",
     },
+  },
 
-    "sway/scratchpad": {
-        "format": "{icon} {count}",
-        "show-empty": false,
-        "format-icons": ["", ""],
-        "tooltip": true,
-        "tooltip-format": "{app}: {title}"
-    },
+  "sway/mode": {
+    "format": "<span style=\"italic\">{}</span>"
+  },
 
+  "sway/scratchpad": {
+    "format": "{icon} {count}",
+    "show-empty": false,
+    "format-icons": ["", ""],
+    "tooltip": true,
+    "tooltip-format": "{app}: {title}"
+  },
 
-    "idle_inhibitor": {
-        "format": "{icon}",
-        "format-icons": {
-            "activated": "",
-            "deactivated": ""
-        }
-    },
-
-    "tray": {
-        // "icon-size": 21,
-        "spacing": 10
-    },
-
-    "clock": {
-        // "timezone": "America/New_York",
-        "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
-        "format-alt": "{:%Y-%m-%d}"
-    },
-
-    "cpu": {
-        "format": "{usage}% ",
-        "tooltip": false
-    },
-
-    "memory": {
-        "format": "{}% "
-    },
-
-    "temperature": {
-        // "thermal-zone": 2,
-        // "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
-        "critical-threshold": 80,
-        // "format-critical": "{temperatureC}°C {icon}",
-        "format": "{temperatureC}°C {icon}",
-        "format-icons": ["", "", ""]
-    },
-
-    "backlight": {
-        // "device": "acpi_video1",
-        "format": "{percent}% {icon}",
-        "format-icons": ["", "", "", "", "", "", "", "", ""]
-    },
-
-    "battery": {
-        "states": {
-            // "good": 95,
-            "warning": 30,
-            "critical": 15
-        },
-        "format": "{capacity}% {icon}",
-        "format-charging": "{capacity}% ",
-        "format-plugged": "{capacity}% ",
-        "format-alt": "{time} {icon}",
-        // "format-good": "", // An empty format will hide the module
-        // "format-full": "",
-        "format-icons": ["", "", "", "", ""]
-    },
-
-    "battery#bat2": {
-        "bat": "BAT2"
-    },
-
-    "network": {
-        // "interface": "wlp2*", // (Optional) To force the use of this interface
-        "format-wifi": "{essid} ({signalStrength}%) ",
-        "format-ethernet": "{ipaddr}/{cidr} ",
-        "tooltip-format": "{ifname} via {gwaddr} ",
-        "format-linked": "{ifname} (No IP) ",
-        "format-disconnected": "Disconnected ⚠",
-        "format-alt": "{ifname}: {ipaddr}/{cidr}"
-    },
-
-    "pulseaudio": {
-        // "scroll-step": 1, // %, can be a float
-        "format": "{volume}% {icon} {format_source}",
-        "format-bluetooth": "{volume}% {icon} {format_source}",
-        "format-bluetooth-muted": " {icon} {format_source}",
-        "format-muted": " {format_source}",
-        "format-source": "{volume}% ",
-        "format-source-muted": "",
-        "format-icons": {
-            "headphone": "",
-            "hands-free": "",
-            "headset": "",
-            "phone": "",
-            "portable": "",
-            "car": "",
-            "default": ["", "", ""]
-        },
-        "on-click": "pavucontrol"
-    },
-
-    "custom/media": {
-        "format": "{icon} {}",
-        "return-type": "json",
-        "max-length": 40,
-        "format-icons": {
-            "spotify": "",
-            "default": "🎜"
-        },
-        "escape": true,
-        "exec": "$HOME/.config/waybar/mediaplayer.py 2> /dev/null" // Script in resources folder
-        // "exec": "$HOME/.config/waybar/mediaplayer.py --player spotify 2> /dev/null" // Filter player based on name
+  "idle_inhibitor": {
+    "format": "{icon}",
+    "format-icons": {
+      "activated": "",
+      "deactivated": ""
     }
+  },
+
+  "cpu": {
+    "format": "",
+    "tooltip": true,
+    "tooltip-format": "{usage}%"
+  },
+
+  "memory": {
+    "format": "",
+    "tooltip-format": "{}%"
+  },
+
+  "temperature": {
+    // "thermal-zone": 2,
+    // "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
+    "critical-threshold": 80,
+    // "format-critical": "{temperatureC}°C {icon}",
+    "format": "{icon}",
+    "format-icons": ["", "", ""],
+    "tooltip-format": "{temperatureC}°C",
+  },
 }
