--- a/SWAYWM/sway/core/rules
+++ b/SWAYWM/sway/core/rules
@@ -20,12 +20,6 @@ for_window {
     resize set width 1030 height 710
   }
 
-  [class="Lxappearance"] {
-    floating enable,
-    resize set width 70 ppt height 65 ppt
-    focus,
-  }
-
   [app_id="thunar" title="Progresso"] {
     floating enable
     focus,
@@ -36,7 +30,7 @@ for_window {
     resize set width 60 ppt height 80 ppt
   }
 
-  [class="Anki"] layout tabbed
+  #[class="Anki"] layout tabbed
 
   [window_role="pop-up"] floating enable
   [window_type="menu"] floating enable
